tests/baselines/reference/tsxStatelessFunctionComponentsWithTypeArguments5.errors.txt
tests/cases/conformance/jsx/file.tsx(5,15): error TS2322: Type 'T' is not assignable to type 'IntrinsicAttributes & T'.
  Type '{ prop: number; }' is not assignable to type 'IntrinsicAttributes & T'.
    Type '{ prop: number; }' is not assignable to type 'T'.
      Type 'T' is not assignable to type 'IntrinsicAttributes'.
        Type '{ prop: number; }' has no properties in common with type 'IntrinsicAttributes'.
tests/cases/conformance/jsx/file.tsx(16,42): error TS2339: Property 'prop1' does not exist on type 'IntrinsicAttributes & { prop: number; }'.


==== tests/cases/conformance/jsx/file.tsx (2 errors) ====
    import React = require('react')
    
    declare function Component<U>(l: U): JSX.Element;
    function createComponent<T extends { prop: number }>(arg: T) {
        let a1 = <Component {...arg} />;
                  ~~~~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'IntrinsicAttributes & T'.
!!! error TS2322:   Type '{ prop: number; }' is not assignable to type 'IntrinsicAttributes & T'.
!!! error TS2322:     Type '{ prop: number; }' is not assignable to type 'T'.
!!! error TS2322:       Type 'T' is not assignable to type 'IntrinsicAttributes'.
!!! error TS2322:         Type '{ prop: number; }' has no properties in common with type 'IntrinsicAttributes'.
        let a2 = <Component {...arg} prop1 />;
    }
    
    declare function ComponentSpecific<U>(l: { prop: U }): JSX.Element;
    declare function ComponentSpecific1<U>(l: { prop: U, "ignore-prop": number }): JSX.Element;
    
    function Bar<T extends { prop: number }>(arg: T) {
        let a1 = <ComponentSpecific {...arg} ignore-prop="hi" />;  // U is number
        let a2 = <ComponentSpecific1 {...arg} ignore-prop={10} />;  // U is number
        let a3 = <ComponentSpecific {...arg} prop="hello" />;   // U is "hello"
        let a4 = <ComponentSpecific {...arg} prop1="hello" />;   // U is "hello"
                                             ~~~~~~~~~~~~~
!!! error TS2339: Property 'prop1' does not exist on type 'IntrinsicAttributes & { prop: number; }'.
    }
    